syntax = "proto3";

import "message/user_message.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message CreateUserResponse {
  UserMessage user = 1;
}

message UpdateUserRequest {
  UserMessage source = 1;
}

message UpdateUserResponse {
  UserMessage user = 1;
}

message DeleteUserRequest {
  int32 user_id = 1;
  optional bool propagate_deletion = 2;
}

message DeleteUserResponse {}